chore: 도커 이미지 빌드 푸시 에러 수정5

--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -34,7 +34,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: ./
-          file: ./app/backend/Dockerfile
+          file: ./apps/backend/Dockerfile
           push: true
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/nestjs-app
 
