chore: 도커 이미지 빌드 푸시 에러 수정9

--- a/apps/backend/DockerFile
+++ b/apps/backend/DockerFile
@@ -4,17 +4,19 @@ FROM node:20
 # 2. 작업 디렉토리 설정
 WORKDIR /app
 
-# 3. 종속성 설치
-RUN yarn global add @nestjs/cli  
+# 3. NestJS CLI 설치
+RUN yarn global add @nestjs/cli
+
+# 4. 종속성 설치
+COPY package.json yarn.lock ./
 RUN yarn install --frozen-lockfile
 
-
-# 4. NestJS 프로젝트 복사
+# 5. NestJS 프로젝트 복사
 COPY . .
 
-# 5. 빌드 및 실행
+# 6. 빌드 및 실행
 RUN yarn build
 CMD ["yarn", "start:prod"]
 
-# 6. 포트 설정
+# 7. 포트 설정
 EXPOSE 4000
